# stockviewer

./: .gitignore  Dockerfile  README.rst  Untitled.ipynb  app.py  pyproject.toml  release.sh  stockviewer playground.ipynb  stockviewer.yml  yfinance playground.ipynb
data/: example_activity.csv
stockviewer/data/: Activity.py  StockInfo.py
stockviewer/function/: function.py
stockviewer/gui/: dash.py  example_dash.py
stockviewer/yahoo/: tickers.py
tests/: test_stockviewer.py
