[tool.poetry]
name = "stockviewer"
version = "0.1.0"
description = ""
authors = ["Bruno De Deken <dedekenbruno@gmail.com>"]
packages = [
    {include = "stockviewer"}
]
[tool.poetry.dependencies]
python = "^3.9"
yfinance = "^0.1.70"
addict = "^2.4.0"
seaborn = "^0.11.2"
plotly = "^5.5.0"
dash = "^2.1.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
nbdev = "^1.1.23"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
